gitops/manifests/bytestash/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bytestash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bytestash
        app.kubernetes.io/name: bytestash
    spec:
      enableServiceLinks: false
      containers:
        - name: bytestash
          image: ghcr.io/jordan-dalby/bytestash:1.5.11
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: snippets
              mountPath: /data/snippets
      volumes:
        - name: snippets
          persistentVolumeClaim:
            claimName: bytestash-snippets-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app: bytestash
spec:
  selector:
    app: bytestash
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytestash-internal
  namespace: bytestash
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bytestash.local.timmybtech.com`)
      kind: Rule
      services:
        - name: bytestash
          port: 80
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytestash-public
  namespace: bytestash
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bytestash.timmybtech.com`)
      kind: Rule
      services:
        - name: bytestash
          port: 80
  tls:
    secretName: timmybtech-com-tls
